# survivor

./: .gitignore  pyproject.toml
assets/: __init__.py
docs/: roadmap.md
src/: animation.py  button.py  constants.py  enemy.py  enemySpawn.py  entity.py  game.py  main.py  menu.py  player.py  shot.py  sprite_frames.py  sprite_sheet.py  test_animation.py  test_shot.py
tests/: test_enemy.py  test_menu.py  test_packaging.py  test_player.py  test_shot.py  test_timer_and_spawn.py
