[project]
name = "survivor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.5.7",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
packages = ["assets"]
py-modules = [
    "animation",
    "button",
    "constants",
    "enemy",
    "enemySpawn",
    "entity",
    "game",
    "main",
    "menu",
    "player",
    "shot",
    "sprite_frames",
    "sprite_sheet",
]

[tool.setuptools.package-dir]
"" = "src"
assets = "assets"

[tool.setuptools.package-data]
assets = ["*.jpg", "*.png"]
